--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ flake8 = "^7.1.1"
 black = "^24.8.0"
 isort = "^5.13.2"
 ipython = "^8.26.0"
+pre-commit = "^3.8.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
