--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ black = "^24.8.0"
 isort = "^5.13.2"
 ipython = "^8.26.0"
 pre-commit = "^3.8.0"
+pytest = "^8.3.2"
+requests-mock = "^1.12.1"
+coverage = "^7.6.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -23,3 +26,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
+
+[tool.black]
+line-length = 79
