--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -1,23 +1,20 @@
-name: Setup
+name: CI setup
+description: 'Set up the CI environment for the repository'
 
-on:
-  workflow_call:
+inputs:
+  python-version:
+    description: 'The version of Python to use'
+    required: true
+    default: '3.x'
 
-jobs:
-  setup:
-    name: Setup
-    runs-on: ubuntu-latest
-    outputs:
-      python-version: ${{ steps.setup-python.outputs.python-version }}
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
+runs:
+  using: composite
+  steps:
     - name: Set up Python
       id: setup-python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: ${{ inputs.python-version }}
 
     - name: Install pipx
       run: |
