--- a/.github/workflows/formatting_and_linting.yml
+++ b/.github/workflows/formatting_and_linting.yml
@@ -9,9 +9,6 @@ on:
       - main
 
 jobs:
-  setup:
-    uses: ./.github/workflows/setup.yml
-
   formatting:
     name: Formatting
     runs-on: ubuntu-latest
@@ -20,6 +17,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+    
+    - name: Setup
+      uses: ./.github/actions/setup
+      id: setup
+      with:
+        python-version: '3.x'
 
     - name: Run black
       run: poetry run black --check .
@@ -30,11 +33,16 @@ jobs:
   linting:
     name: Linting
     runs-on: ubuntu-latest
-    needs: setup
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
+    - name: Setup
+      uses: ./.github/actions/setup
+      id: setup
+      with:
+        python-version: '3.x'
 
     - name: Run flake8
       run: poetry run flake8 .
