--- a/.github/workflows/formatting_and_linting.yml
+++ b/.github/workflows/formatting_and_linting.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Setup
-      uses: ./.github/actions/setup
+      uses: './.github/actions/ci-setup'
       id: setup
       with:
         python-version: '3.x'
@@ -38,7 +38,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup
-      uses: ./.github/actions/setup
+      uses: './.github/actions/ci-setup'
       id: setup
       with:
         python-version: '3.x'
