--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -20,11 +20,12 @@ runs:
       run: |
         sudo apt install pipx
         pipx ensurepath
+      shell: bash
 
     - name: Install poetry
       run: pipx install poetry==1.8.2
+      shell: bash
 
     - name: Install dependencies
       run: poetry install
-
       shell: bash
