--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -44,6 +44,10 @@ runs:
       run: pipx install poetry==${{ env.poetry_version }}
       shell: bash
 
+    - name: Configure Poetry
+      run: poetry config virtualenvs.in-project true
+      shell: bash
+
     - name: Set python version
       run: poetry env use python
       shell: bash
