--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -35,7 +35,7 @@ runs:
       id: cache-poetry
       uses: actions/cache@v3
       with:
-        path: ~/.local
+        path: $HOME/.local/bin
         key: ${{ runner.os }}-poetry-${{ env.poetry_version }}
 
     - name: Install poetry
