--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -31,6 +31,12 @@ runs:
         echo "poetry_version=$poetry_version" >> $GITHUB_ENV
       shell: bash
 
+    - name: Print pipx and poetry location
+      run: |
+        echo "pipx location: $(which pipx)"
+        echo "poetry location: $(which poetry)"
+      shell: bash
+
     - name: Cache pipx and poetry
       id: cache-pipx-and-poetry
       uses: actions/cache@v3
@@ -39,13 +45,14 @@ runs:
           ~/.cache/pipx
           ~/.local/bin
           /opt/pipx_bin
-
-    - name: Cache Poetry
-      id: cache-poetry
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pipx
         key: ${{ runner.os }}-poetry-${{ env.poetry_version }}
+
+    # - name: Cache Poetry
+    #   id: cache-poetry
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~/.cache/pipx
+    #     key: ${{ runner.os }}-poetry-${{ env.poetry_version }}
 
     - name: Install poetry
       if: steps.cache-poetry.outputs.cache-hit != 'true'
