--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -38,6 +38,10 @@ runs:
         virtualenvs-create: true
         virtualenvs-in-project: true
 
+    - name: Configure poetry
+      run: poetry config virtualenvs.in-project true
+      shell: bash
+
     - name: Set python version
       run: poetry env use python
       shell: bash
